# solarRadioFirefly

./: .cproject  .gitignore  .project  CMakeLists.txt  gcc_nrf52.ld  gcc_nrf52NoSD.ld  readme.md
firefly/: CMakeLists.txt  custom_board.h  fireflyConfig.h  fireflyConfig.txt  handlers.cpp  main.cpp  powerManagedMain.cpp  pseudoStdLib.cpp  readme.md  sdk_config.h  testMain.cpp  workFacilitator.cpp  workFacilitator.h
firefly/main/: main.cpp  mainTask.cpp  mainTask.h  powerManagedMain.cpp  testMain.cpp
firefly/modules/: boardManager.cpp  groupWork.cpp  groupWork.h  powerShedder.cpp  powerShedder.h  readme.md  workStrategy.cpp  workStrategy.h  workSupervisor.cpp  workSupervisor.h  worker.cpp  worker.h
firefly/other/: boardManager.cpp  boardManager.h
firefly/power/: excessPowerWorkStrategy.cpp  excessPowerWorkStrategy.h  powerAdjuster.cpp  powerAdjuster.h  powerShedder.cpp  powerShedder.h  workAndFishEnergyStrategy.cpp  workAndFishEnergyStrategy.h  workOnlyEnergyStrategy.cpp  workOnlyEnergyStrategy.h  workerOnlyEnergyStrategy.cpp  workerOnlyEnergyStrategy.h
firefly/work/: groupWork.cpp  groupWork.h  readme.md  workAmount.cpp  workAmount.h  workFactory.cpp  workFactory.h  workStrategy.cpp  workStrategy.h  workSupervisor.cpp  workSupervisor.h  workTime.h  worker.cpp  worker.h
firefly/work/distributed/: distributedSynchronizedWorker.cpp  distributedSynchronizedWorker.h  workClock.cpp  workClock.h  workStrategyDistributed.cpp  workStrategyDistributed.h  workSyncMaintainer.cpp  workSyncMaintainer.h  workSyncMaintenanceClock.cpp  workSyncMaintenanceClock.h
firefly/work/groupWork/: groupWork.cpp  groupWork.h  workStrategyGroup.cpp  workStrategyGroup.h
firefly/work/parameters/: workAmount.cpp  workAmount.h  workFrequency.cpp  workFrequency.h  workTime.cpp  workTime.h
linkerScripts/: nrf52810SD.ld  nrf52wSoftdevice.ld
nrf51/: gcc_startup_nrf51.S  readme.txt
nrf52/: nrf_drv_clock.cpp  readme.md  system_nrf52.cpp
sniffer/: CMakeLists.txt  main.cpp  readme.md  sdk_config.h  seggerConfig.h  snifferMain.cpp
src/: SEGGER_RTT_printf.cpp  fireflyConfig.h  main.cpp  nRFCounter.h  powerManagedMain.cpp  readme.md  snifferMain.cpp
src/modules/: groupWork.cpp  groupWork.h  workSupervisor.cpp  workSupervisor.h  worker.cpp  worker.h
